--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.4.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.23",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
@@ -88,7 +89,7 @@
             "php-http/discovery": true
         },
         "platform": {
-            "php": "8.3.20"
+            "php": "8.4.0"
         }
     },
     "minimum-stability": "stable",
