--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@heroui/react": "^2.8.5",
+        "framer-motion": "^12.23.24",
+        "ziggy-js": "^2.6.0"
     }
 }
